--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Estilos CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Iconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -40,6 +41,10 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary agregar-btn" onclick="agregarHorario()">Agregar</button>
+                <div class="d-flex justify-content-center mt-4">
+    <button type="button" class="btn btn-success" onclick="exportarExcel()">Exportar a Excel</button>
+</div>
+
             </form>
         </div>
 
