--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css"> <!-- Estilos CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Iconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+   
 </head>
 <body>
     <div class="container">
         
         <!-- Formulario para agregar un nuevo horario -->
-        <div class="form-container">
-            <img src="logo.png" alt="Logo" class="logo"> <!-- Reemplaza 'logo.png' con tu imagen -->
+        <div class="form-container mt-4">
+            <img src="logo.png" alt="Logo" class="logo mb-4"> <!-- Reemplaza 'logo.png' con tu imagen -->
             <h2>Agregar Nuevo Horario</h2>
             <form id="formAgregar">
                 <div class="row mb-3">
@@ -41,9 +41,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary agregar-btn" onclick="agregarHorario()">Agregar</button>
-                 <button type="button" class="btn btn-success" onclick="exportarExcel()">Exportar a Excel</button>
-
-
+                <button type="button" class="btn btn-success mt-3" onclick="exportarExcel()">Exportar a Excel <i class="fas fa-file-excel"></i></button>
             </form>
         </div>
 
@@ -57,8 +55,7 @@
     </div>
 
     <script src="script.js"></script> <!-- Lógica JS -->
-
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script> <!-- Librería para Excel -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS -->
 </body>
 </html>
