--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
                         <select id="dia" class="form-control">
                             <option value="lunes">Lunes</option>
                             <option value="martes">Martes</option>
-                            <option value="miércoles">Miércoles</option>
+                            <option value="miércoles">Miercoles</option>
                             <option value="jueves">Jueves</option>
                             <option value="viernes">Viernes</option>
-                            <option value="sabado">Sábado</option>
+                            <option value="sabado">Sabado</option>
                             <option value="domingo">Domingo</option>
-                            <option value="descanso">Descanso</option>
                         </select>
                     </div>
                     <div class="col">
@@ -41,7 +40,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary agregar-btn" onclick="agregarHorario()">Agregar</button>
-                <button type="button" class="btn btn-success mt-3" onclick="exportarExcel()">Exportar a Excel <i class="fas fa-file-excel"></i></button>
+                <button type="button" class="btn btn-success agregar-btn" onclick="exportarExcel()">Exportar a Excel <i class="fas fa-file-excel"></i></button>
             </form>
         </div>
 
