--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary agregar-btn" onclick="agregarHorario()">Agregar</button>
+               <div id="resumenHoras"></div>
                 <button type="button" class="btn btn-success agregar-btn" onclick="exportarExcel()">Exportar a Excel <i class="fas fa-file-excel"></i></button>
             </form>
         </div>
