--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
              
                 <button type="button" class="btn btn-success agregar-btn" onclick="exportarExcel()">Exportar a Excel <i class="fas fa-file-excel"></i></button>
             </form>
-        </div>
-       <div id="resumenHoras"></div>
-<button onclick="calcularHorasTrabajadas()">Calcular Horas</button>
-
+        </div
 
 
         <!-- Contenedor donde se mostrarán los horarios -->
